Fix cardback overflow on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 @theme {
     --color-primary: #A6864A;
     --color-dark: #2A2A2A;
+    --breakpoint-xs: 30rem;
 }
 
 .button-primary {
